@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<portlets xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+          i18n:domain="plone">
+
+  <portlet
+    addview="portlets.Activity"
+    title="Activity Portlet"
+    description="Portlet that shows all recent activities"
+    />
+
+ </portlets>
