@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<portlets xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+          i18n:domain="plone">
+
+  <portlet
+    addview="portlets.Activity"
+    remove="True"
+    />
+
+ </portlets>
