@@ -1,5 +1,7 @@
+from ftw.activity.portlets import activity_portlet
 from ftw.builder import builder_registry
 from ftw.builder.dexterity import DexterityBuilder
+from ftw.builder.portlets import PlonePortletBuilder
 
 
 class DxTypeBuilder(DexterityBuilder):
@@ -7,3 +9,9 @@ class DxTypeBuilder(DexterityBuilder):
 
 
 builder_registry.register('dx type', DxTypeBuilder)
+
+
+class ActivityPortlet(PlonePortletBuilder):
+    assignment_class = activity_portlet.Assignment
+
+builder_registry.register('activity portlet', ActivityPortlet)
